--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^5.2.9",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
